<resources>
    <string name="app_name">Project2</string>
    <string name="welcome_to_calorie_tracker_please_sign_in">Welcome to Calorie Tracker. Please sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_your_calorie_tracker">Welcome to your calorie tracker</string>
    <string name="welcome_to_your_calorie_tracker_">Welcome to your Calorie Tracker</string>
    <string name="today_s_calorie_goal">Today\'s Calorie Goal</string>
    <string name="today_s_protein_goal">Today\'s Protein Goal</string>
    <string name="add_meal_entry">Add Meal Entry</string>
    <string name="view_entries">View Entries</string>
    <string name="log_out">Log Out</string>
    <string name="go_back">Go back</string>
    <string name="sign_up">Sign Up</string>
    <string name="meal_title">Meal title:</string>
    <string name="enter_a_meal_into_your_log">Enter a meal into your log:</string>
    <string name="enter_meal_title">Enter Meal Title:</string>
    <string name="add_a_meal_to_your_log">Add a meal to your log</string>
    <string name="enter_calorie_count">Enter Calorie Count:</string>
    <string name="title">Title</string>
    <string name="count">Count</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="add_a_meal_to_your_log2">Add a Meal to Your Log</string>
    <string name="enter_protein_count">Enter Protein Count:</string>
    <string name="welcome_to_your_calorie_tracker1">Welcome to your Calorie Tracker,</string>
    <string name="username1">username</string>
    <string name="previous_log_entries">Previous Log Entries:</string>
    <string name="hello">Hello</string>
    <string name="back2">Back</string>
    <string name="admin_page">Admin Page</string>
    <string name="your_current_log_in_streak">Your Current Log In Streak:</string>
    <string name="admin_center">Admin Center</string>
    <string name="streak">streak</string>
    <string name="secret_has_not_been_found">Secret has not been found.</string>
</resources>