<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealLogActivity">

    <TextView
        android:id="@+id/meal_log_text"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_margin="16dip"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_a_meal_to_your_log2"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mealtitle_text"
        android:layout_width="181dp"
        android:layout_height="65dp"
        android:layout_margin="16dip"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/enter_meal_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_log_text" />

    <TextView
        android:id="@+id/proteinprompt_text"
        android:layout_width="215dp"
        android:layout_height="68dp"
        android:layout_margin="16dip"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/enter_protein_count"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealtitle_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calorieprompt_text"
        android:layout_width="211dp"
        android:layout_height="71dp"
        android:layout_margin="16dip"
        android:gravity="center"
        android:text="@string/enter_calorie_count"
        android:textSize="22sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinprompt_text" />

    <EditText
        android:id="@+id/mealtitle_edittext"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mealtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/meal_log_text" />

    <EditText
        android:id="@+id/protein_edittext"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="28dp"

        android:ems="10"
        android:hint="@string/protein"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealtitle_edittext" />

    <EditText
        android:id="@+id/calorie_edittext"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="40dp"

        android:ems="10"
        android:hint="@string/calories"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protein_edittext" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:backgroundTint="#48b064"
        android:text="@string/confirm"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />

    <Button
        android:id="@+id/backHomeButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="#48b064"
        android:text="@string/back"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

</androidx.constraintlayout.widget.ConstraintLayout>