<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:id="@+id/titleLoginTextView"
        android:textSize="38sp"
        android:text="@string/welcome_to_calorie_tracker_please_sign_in"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/userNameLoginEditText"
        android:textSize="20sp"
        android:inputType="text"
        android:autofillHints="Please enter username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText"
        android:id="@+id/passwordLoginEditText"
        android:textSize="20sp"
        android:autofillHints="Please enter password"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#48b064"
        />



</androidx.constraintlayout.widget.ConstraintLayout>