<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/titleLoginTextView"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_margin="16dip"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/welcome_to_your_calorie_tracker1"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayusername"
        android:layout_width="182dp"
        android:layout_height="32dp"
        android:layout_margin="16dip"
        android:gravity="center"
        android:text="@string/username1"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/addlogButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:backgroundTint="#48b064"
        android:text="@string/add_meal_entry"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/logButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:backgroundTint="#48b064"
        android:text="@string/view_entries"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:backgroundTint="#48b064"
        android:text="Admin Center"
        android:textSize="19sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logButton"
        app:layout_constraintVertical_bias="0.581" />

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:layout_marginTop="192dp"
        android:backgroundTint="#48b064"
        android:text="@string/log_out"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <ProgressBar
        android:id="@+id/proteintracker"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView" />

    <TextView
        android:id="@+id/caloriemeter"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_margin="16dip"
        android:gravity="center"
        android:text="@string/today_s_calorie_goal"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/proteinmeter"
        android:layout_width="218dp"
        android:layout_height="36dp"
        android:layout_margin="16dip"
        android:gravity="center"
        android:text="@string/today_s_protein_goal"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <ProgressBar
        android:id="@+id/calorietracker"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

</androidx.constraintlayout.widget.ConstraintLayout>